# LordPsyanBots-wotlk

./: CMakeLists.txt  README.md
cmake/: options.cmake  showoptions.cmake
contrib/mmap/src/: MangosMap.h
sql/Extras/sql/: These_Already_added_to_base_characters.sql.md
sql/Extras/sql/world/: immersive_pool.sql  immersive_world.sql
sql/base/: characters.sql
sql/updates/mangos/: 13992_01_mangos_weapon_skills_fix_wotlk.sql
src/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/Chat/: Chat.cpp  Chat.h  ChatHandler.cpp
src/game/Entities/: CharacterHandler.cpp  Creature.h  GameObject.cpp  GossipDef.h  Item.cpp  Player.cpp  Player.h  Unit.cpp  Unit.h
src/game/Globals/: SharedDefines.h
src/game/Groups/: Group.cpp  Group.h
src/game/Maps/: Map.cpp
src/game/Quests/: QuestHandler.cpp
src/game/Reputation/: ReputationMgr.cpp
src/game/Server/: DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h  WorldSession.cpp  WorldSession.h
src/game/Spells/: SpellAuras.cpp  SpellHandler.cpp
src/game/World/: World.cpp
src/mangosd/: mangosd.conf.dist.in
src/modules/: CMakeLists.txt
src/modules/Bots/: CMakeLists.txt
src/modules/Bots/ahbot/: AhBot.cpp  Category.h  ConsumableCategory.h  ItemBag.cpp  TradeCategory.cpp
src/modules/Bots/playerbot/: GuildTaskMgr.cpp  LootObjectStack.cpp  PerformanceMonitor.cpp  PerformanceMonitor.h  PlayerbotAI.cpp  PlayerbotCommandServer.cpp  PlayerbotDbStore.cpp  PlayerbotFactory.cpp  PlayerbotMgr.cpp  RandomItemMgr.cpp  RandomPlayerbotFactory.cpp  RandomPlayerbotMgr.cpp  RandomPlayerbotMgr.h  ServerFacade.cpp  ServerFacade.h
src/modules/Bots/playerbot/strategy/actions/: AcceptQuestAction.cpp  AttackAction.cpp  BuyAction.cpp  ChatActionContext.h  GoAction.cpp  GossipHelloAction.cpp  GreetAction.cpp  ListSpellsAction.cpp  LootAction.cpp  LootRollAction.cpp  MailAction.cpp  MoveToRpgTargetAction.cpp  MovementActions.cpp  RepairAllAction.cpp  RevealGatheringItemAction.cpp  SuggestWhatToDoAction.cpp  TeleportAction.cpp  TellReputationAction.cpp  TradeStatusAction.cpp  TrainerAction.cpp  UseItemAction.cpp  UseMeetingStoneAction.cpp  WhoAction.cpp
src/modules/Bots/playerbot/strategy/generic/: ChatCommandHandlerStrategy.cpp
src/modules/Bots/playerbot/strategy/triggers/: ChatTriggerContext.h
src/modules/Bots/playerbot/strategy/values/: Arrow.cpp  AttackersValue.cpp  Formations.cpp  IsMovingValue.h  ItemUsageValue.cpp  NearestFriendlyPlayersValue.cpp  PossibleRpgTargetsValue.cpp  SnareTargetValue.cpp  StatsValues.cpp  ValueContext.h
src/modules/Bots/playerbot/strategy/warrior/: WarriorTriggers.h
src/modules/Immersive/: CMakeLists.txt  ImmersiveConfig.cpp  ImmersiveConfig.h  immersive.cpp  immersive.h
src/shared/Database/: Database.cpp
